k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ms-websocket-service
  namespace: ambulance-system
  labels:
    app: ms-websocket
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: websocket
    protocol: TCP
    name: http
  selector:
    app: ms-websocket
  sessionAffinity: None
  publishNotReadyAddresses: false
  ipFamilyPolicy: SingleStack
